--- a/Homepage.html
+++ b/Homepage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Text -->
-    <div class="container">
+    <div class="container font-md">
       <h2>Text</h2>
       <span class="text-primary">Text-primary</span>
       |
