bem method on card.scss

--- a/Homepage.html
+++ b/Homepage.html
@@ -379,8 +379,8 @@
       <div class="row gap-2 justify-center">
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-primary text-white">
-            <h3 class="card-title">Hello Primary!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Primary!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -388,8 +388,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-secondary text-white">
-            <h3 class="card-title">Hello Secondary!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Secondary!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -397,8 +397,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-tertiary">
-            <h3 class="card-title">Hello Tertiary!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Tertiary!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -406,8 +406,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-info">
-            <h3 class="card-title">Hello Info!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Info!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -415,8 +415,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-error text-white">
-            <h3 class="card-title">Hello Error!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Error!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -424,8 +424,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-fb text-white">
-            <h3 class="card-title">Hello Facebook!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Facebook!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -433,8 +433,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-tw">
-            <h3 class="card-title">Hello Twitter!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Twitter!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -442,8 +442,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-yt text-white">
-            <h3 class="card-title">Hello Youtube!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Youtube!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -451,8 +451,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-black text-white">
-            <h3 class="card-title">Hello Black!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello Black!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
@@ -460,8 +460,8 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white">
-            <h3 class="card-title">Hello White!</h3>
-            <p class="card-body">
+            <h3 class="card__title">Hello White!</h3>
+            <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
             </p>
