--- a/html/Page1.html
+++ b/html/Page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page1</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -14,24 +14,43 @@
     <div class="container mt-2">
       <header class="header text-white">
         <h1 class="header__title">Startup 3</h1>
-        <nav class="header__navs">
-          <li class="text-hover-primary-light-8"><a href="#">Tour</a></li>
-          <li class="text-hover-primary-light-8"><a href="#">Features</a></li>
-          <li class="text-hover-primary-light-8"><a href="#">Pricing</a></li>
-          <li class="text-hover-primary-light-8"><a href="#">Blog</a></li>
-          <li class="text-hover-fb font-sm">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-          </li>
-          <li class="text-hover-tw font-sm">
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          </li>
-          <li class="text-hover-yt font-sm">
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-          </li>
+        <nav>
+          <div class="header__menu">
+
+            <ul class="header__navs">
+              <li class="header__items text-hover-primary-light-8">
+                <a href="/html/Tour.html" >Tour</a>
+              </li>
+              <li class="header__items text-hover-primary-light-8">
+                <a href="#" >Features</a>
+              </li>
+              <li class="header__items text-hover-primary-light-8">
+                <a href="#"">Pricing</a>
+              </li>
+              <li class="header__items text-hover-primary-light-8">
+                <a href="#" >Blog</a>
+              </li>
+              <li class="header__items text-hover-fb font-sm">
+                <a href="#" 
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="header__items text-hover-tw font-sm">
+                <a href="#"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </li>
+              <li class="header__items text-hover-yt font-sm">
+                <a href="#" 
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </header>
       <!-- display-f align-center justify-space-between mt-2 -->
-      <div class="main row align-center col-gap-9 mt-2 mb-3">
+      <main class="main row align-center col-gap-9 mt-2 mb-3">
         <div class="main__info text-white">
           <h3 class="font-xxl">Simple design & prototyping</h3>
           <p class="font-sm text-tertiary-light-5 leading-2 mx-width-650">
@@ -43,7 +62,7 @@
           <button class="btn-green font-sm pl-2 pr-2 b-rad">Get Started</button>
           <p class="text-tertiary-light-5">It is absolutely free.</p>
         </div>
-      </div>
+      </main>
 
       <iframe
         class="mx-width-1200 b-rad-sm mt-2 mb-4"
@@ -55,14 +74,14 @@
     </div>
     <footer class="footer bg-white pt-2 pb-2">
       <div class="container row col-gap-9 justify-space-between">
-        <div class="col-9-sm col-4-md col-2-lg">
+        <div class="col-12-sm col-2-lg">
           <h3>Startup 3</h3>
           <label
             >Be sure to take a look at our Terms of Use and Privacy
             Policy</label
           >
         </div>
-        <div class="col-5-sm col-4-md col-1-lg">
+        <div class="col-4-sm col-1-lg">
           <h3>About</h3>
           <p>About Us</p>
           <p>Blog</p>
@@ -70,14 +89,14 @@
           <p>Career</p>
           <p>Contact</p>
         </div>
-        <div class="col-4-sm col-4-md col-1-lg">
+        <div class="col-4-sm col-1-lg">
           <h3>Company</h3>
           <p>Privacy</p>
           <p>Support</p>
           <p>Help Desk</p>
           <p>FAQ</p>
         </div>
-        <div class="col-10-sm col-4-md col-4-lg">
+        <div class="col-12-sm col-4-lg">
           <h3>Subscribe to our NewsLetters</h3>
           <input
             class="font-sm pl-1 pt-1 b-rad border-1-solid-tertiary pb-1"
@@ -109,5 +128,8 @@
         </p>
       </div>
     </div>
+
+
+    <script src="index.js"></script>
   </body>
 </html>
