--- a/html/Tour.html
+++ b/html/Tour.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour</title>
     <link rel="stylesheet" href="/css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
   </head>
   <body class="bg-primary">
     <div class="text-white display-f flex-column align-center p-2">
@@ -109,6 +113,63 @@
             </button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <footer class="footer bg-white pt-2 pb-2">
+      <div class="container row col-gap-9 justify-space-between">
+        <div class="col-12-sm col-2-lg">
+          <h3>Startup 3</h3>
+          <label
+            >Be sure to take a look at our Terms of Use and Privacy
+            Policy</label
+          >
+        </div>
+        <div class="col-4-sm col-1-lg">
+          <h3>About</h3>
+          <p>About Us</p>
+          <p>Blog</p>
+          <p>Team</p>
+          <p>Career</p>
+          <p>Contact</p>
+        </div>
+        <div class="col-4-sm col-1-lg">
+          <h3>Company</h3>
+          <p>Privacy</p>
+          <p>Support</p>
+          <p>Help Desk</p>
+          <p>FAQ</p>
+        </div>
+        <div class="col-12-sm col-4-lg">
+          <h3>Subscribe to our NewsLetters</h3>
+          <input
+            class="font-sm pl-1 pt-1 b-rad border-1-solid-tertiary pb-1"
+            type="text"
+            placeholder="Your email"
+          />
+          <button class="btn-green text-white font-sm pl-2 pr-2 mt-1 b-rad">
+            Subscribe
+          </button>
+          <div class="display-f font-md mt-2 align-center col-gap-3">
+            <li class="text-tw text-hover-tw-dark-1">
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li class="text-fb text-hover-fb-dark-1">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li class="text-error text-hover-error-dark-1">
+              <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+            </li>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="navbar-white text-center">
+      <div class="container">
+        <p class="text-tertiary-dark-2">
+          Startup Framework contains components and complex blocks which can
+          easily be integrated into almost any design.
+        </p>
       </div>
     </div>
   </body>
