added header on tour.html

--- a/html/Page1.html
+++ b/html/Page1.html
@@ -11,8 +11,8 @@
     />
   </head>
   <body class="bg-primary">
-    <div class="container mt-2">
-      <header class="header text-white">
+   
+      <header class="header text-white container mt-2">
         <h1 class="header__title">Startup 3</h1>
         <nav>
           <div class="header__menu">
@@ -49,7 +49,8 @@
           </div>
         </nav>
       </header>
-      <!-- display-f align-center justify-space-between mt-2 -->
+      <div class="container mt-2">
+         <!-- display-f align-center justify-space-between mt-2 -->
       <main class="main row align-center col-gap-9 mt-2 mb-3">
         <div class="main__info text-white">
           <h3 class="font-xxl">Simple design & prototyping</h3>
@@ -71,7 +72,9 @@
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
       >
       </iframe>
-    </div>
+      </div>
+     
+   
     <footer class="footer bg-white pt-2 pb-2">
       <div class="container row col-gap-9 justify-space-between">
         <div class="col-12-sm col-2-lg">
