--- a/html/Tour.html
+++ b/html/Tour.html
@@ -11,6 +11,43 @@
     />
   </head>
   <body class="bg-primary">
+    <header class="header text-white container mt-2">
+      <h1 class="header__title">Startup 3</h1>
+      <nav>
+        <div class="header__menu">
+
+          <ul class="header__navs">
+            <li class="header__items text-hover-primary-light-8">
+              <a href="/html/Tour.html" >Tour</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="#" >Features</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="#"">Pricing</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="#" >Blog</a>
+            </li>
+            <li class="header__items text-hover-fb font-sm">
+              <a href="#" 
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+            </li>
+            <li class="header__items text-hover-tw font-sm">
+              <a href="#"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </li>
+            <li class="header__items text-hover-yt font-sm">
+              <a href="#" 
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <div class="text-white display-f flex-column align-center p-2">
       <h3 class="font-lg leading-5">25 Ready-to-Use Pages</h3>
       <p class="mx-width-768 text-center">
