--- a/html/Tour.html
+++ b/html/Tour.html
@@ -17,7 +17,7 @@
         <div class="header__menu">
 
           <ul class="header__navs">
-            <li class="header__items text-hover-primary-light-8">
+            <li class="header__items text-green text-hover-green-light-4 text-underline">
               <a href="/html/Tour.html" >Tour</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
@@ -61,7 +61,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/1.png" />
-            <p class="card__title text-primary leading-1">
+            <p class="card__title text-primary fw-lg leading-1">
               Quality you can trust
             </p>
             <p class="card__body text-tertiary">
@@ -78,7 +78,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/2.png" />
-            <p class="card__title text-primary leading-1">Fast prototyping</p>
+            <p class="card__title text-primary fw-lg leading-1">Fast prototyping</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -93,7 +93,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/3.png" />
-            <p class="card__title text-primary leading-1">Bootstrap based</p>
+            <p class="card__title text-primary fw-lg leading-1">Bootstrap based</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -108,7 +108,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/4.png" />
-            <p class="card__title text-primary leading-1">Mozart Project</p>
+            <p class="card__title text-primary fw-lg leading-1">Mozart Project</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -123,7 +123,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/5.png" />
-            <p class="card__title text-primary leading-1">Web Generator</p>
+            <p class="card__title text-primary fw-lg leading-1">Web Generator</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -138,7 +138,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/6.png" />
-            <p class="card__title text-primary leading-1">Postcards</p>
+            <p class="card__title text-primary fw-lg leading-1">Postcards</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
