--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="html/Page1.html">Page1</a>
+    <a href="../SassWeb/html/Page1.html">Page1</a>
   </body>
 </html>
