--- a/Page1.html
+++ b/Page1.html
@@ -19,7 +19,7 @@
 
             <ul class="header__navs">
               <li class="header__items text-hover-primary-light-8">
-                <a href="/html/Tour.html" >Tour</a>
+                <a href="Tour.html" >Tour</a>
               </li>
               <li class="header__items text-hover-primary-light-8">
                 <a href="#" >Features</a>
