--- a/Tour.html
+++ b/Tour.html
@@ -15,41 +15,36 @@
       <h1 class="header__title">Startup 3</h1>
       <nav>
         <div class="header__menu">
-
           <ul class="header__navs">
-            <li class="header__items text-green text-hover-green-light-4 text-underline">
-              <a href="/html/Tour.html" >Tour</a>
+            <li
+              class="header__items text-green text-hover-green-light-4 text-underline"
+            >
+              <a href="/html/Tour.html">Tour</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#" >Features</a>
+              <a href="#">Features</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#"">Pricing</a>
+              <a href="#">Pricing</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#" >Blog</a>
+              <a href="#">Blog</a>
             </li>
             <li class="header__items text-hover-fb font-sm">
-              <a href="#" 
-                ><i class="fa-brands fa-facebook-f"></i
-              ></a>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             </li>
             <li class="header__items text-hover-tw font-sm">
-              <a href="#"
-                ><i class="fa-brands fa-twitter"></i
-              ></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
             <li class="header__items text-hover-yt font-sm">
-              <a href="#" 
-                ><i class="fa-brands fa-youtube"></i
-              ></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <div class="text-white display-f flex-column align-center p-2">
-      <h3 class="font-lg leading-5">25 Ready-to-Use Pages</h3>
+      <h3 class="font-lg text-center leading-5">25 Ready-to-Use Pages</h3>
       <p class="mx-width-768 text-center">
         We prepared some high-quality web-pages, that you can use in your
         projects. When you have to create your website you can use these
@@ -78,7 +73,9 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/2.png" />
-            <p class="card__title text-primary fw-lg leading-1">Fast prototyping</p>
+            <p class="card__title text-primary fw-lg leading-1">
+              Fast prototyping
+            </p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -93,7 +90,9 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/3.png" />
-            <p class="card__title text-primary fw-lg leading-1">Bootstrap based</p>
+            <p class="card__title text-primary fw-lg leading-1">
+              Bootstrap based
+            </p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -108,7 +107,9 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/4.png" />
-            <p class="card__title text-primary fw-lg leading-1">Mozart Project</p>
+            <p class="card__title text-primary fw-lg leading-1">
+              Mozart Project
+            </p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -123,7 +124,9 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="/img/tour/5.png" />
-            <p class="card__title text-primary fw-lg leading-1">Web Generator</p>
+            <p class="card__title text-primary fw-lg leading-1">
+              Web Generator
+            </p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
