fix the image that not working

--- a/Tour.html
+++ b/Tour.html
@@ -55,7 +55,7 @@
       <div class="row gap-3 p-2">
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/1.png" />
+            <img class="b-rad-sm" src="img/1.png" />
             <p class="card__title text-primary fw-lg">Quality you can trust</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -70,7 +70,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/2.png" />
+            <img class="b-rad-sm" src="img/2.png" />
             <p class="card__title text-primary fw-lg leading-1">
               Fast prototyping
             </p>
@@ -87,7 +87,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/3.png" />
+            <img class="b-rad-sm" src="img/3.png" />
             <p class="card__title text-primary fw-lg leading-1">
               Bootstrap based
             </p>
@@ -104,7 +104,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/4.png" />
+            <img class="b-rad-sm" src="img/4.png" />
             <p class="card__title text-primary fw-lg leading-1">
               Mozart Project
             </p>
@@ -121,7 +121,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/5.png" />
+            <img class="b-rad-sm" src="img/5.png" />
             <p class="card__title text-primary fw-lg leading-1">
               Web Generator
             </p>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="/img/tour/6.png" />
+            <img class="b-rad-sm" src="img/6.png" />
             <p class="card__title text-primary fw-lg leading-1">Postcards</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
