--- a/Tour.html
+++ b/Tour.html
@@ -19,10 +19,10 @@
             <li
               class="header__items text-green text-hover-green-light-4 text-underline"
             >
-              <a href="/html/Tour.html">Tour</a>
+              <a href="Tour.html">Tour</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#">Features</a>
+              <a href="Features.html">Features</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
               <a href="#">Pricing</a>
