--- a/Features.html
+++ b/Features.html
@@ -45,7 +45,7 @@
     </header>
 
     <div class="container text-white mb-4">
-      <div class="main row col-gap-9 align-center">
+      <div class="main row align-center">
         <div class="mb-4">
           <h3 class="font-xl">Startup Framework</h3>
           <p class="text-tertiary-light-5">
