finish the navs //

--- a/Blogs.html
+++ b/Blogs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Features</title>
+    <title>Blogs</title>
     <link rel="stylesheet" href="css/index.css" />
     <link
       rel="stylesheet"
@@ -19,15 +19,15 @@
             <li class="header__items text-hover-primary-light-8">
               <a href="Tour.html">Tour</a>
             </li>
-            <li
-              class="header__items text-green text-hover-green-light-4 text-underline"
-            >
+            <li class="header__items text-hover-primary-light-8">
               <a href="Features.html">Features</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
               <a href="Pricings.html">Pricing</a>
             </li>
-            <li class="header__items text-hover-primary-light-8">
+            <li
+              class="header__items text-green text-hover-green-light-4 text-underline"
+            >
               <a href="Blogs.html">Blog</a>
             </li>
             <li class="header__items text-hover-fb font-sm">
@@ -44,50 +44,62 @@
       </nav>
     </header>
 
-    <div class="container text-white mb-4">
-      <div class="main row align-center">
-        <div class="mb-4">
-          <h3 class="font-xl">Startup Framework</h3>
-          <p class="text-tertiary-light-5">
-            Startup Framework contains components and complex blocks which can
-            easily be integrated into almost any design.
-          </p>
-        </div>
-
-        <iframe
-          class="mx-width-650 b-rad-sm mt-2 mb-4"
-          width="100%"
-          height="300"
-          src="https://www.youtube.com/embed/tgbNymZ7vqY"
-        >
-        </iframe>
+    <div class="container">
+      <div class="text-white text-center">
+        <h1 class="font-xxl">Your questions answered</h1>
       </div>
-    </div>
-
-    <div class="text-white mb-4">
-      <div class="container row p-1 gap-2">
-        <div class="col-12-xs col-4-lg">
-          <i class="fa-solid fa-bullseye"></i>
-          <h4 class="font-md">Full Control</h4>
-          <p class="text-tertiary-light-5">
-            Easily change and tweak your content when you need to, however you
-            want. No more third party vendor lock-in
+      <div class="text-white row gap-2">
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">How Startup Framework works?</h4>
+          <p class="text-tertiary-light-6 leading-3">
+            The Generator App is an online tool that helps you to export
+            ready-made templates ready to work as your future website. It helps
+            you to combine slides, panels and other components and export it as
+            a set of static files: HTML/CSS/JS.
           </p>
         </div>
-        <div class="col-12-xs col-4-lg">
-          <i class="fa-solid fa-crop"></i>
-          <h4 class="font-md">For Freelancers and Agencies</h4>
-          <p class="text-tertiary-light-5">
-            Pay once and it's yours forever. Use it to build as many sites as
-            you need; long form, presen-tations, splash sites, and more.
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">
+            Do you provide hosting with Startup Framework?
+          </h4>
+          <p class="text-tertiary-light-6 leading-3">
+            No, hosting is on you. You upload the result on your hosting via FTP
+            or using other tools you like. You can use any server, just make
+            sure it have a PHP installed in case if you need a contact form.
           </p>
         </div>
-        <div class="col-12-xs col-4-lg">
-          <i class="fa-regular fa-gem"></i>
-          <h4 class="font-md">Cmd + C / Cmd + V</h4>
-          <p class="text-tertiary-light-5">
-            Edit content in a comfortable manner. It's as simple as copy and
-            paste.
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">What exactly am I buying?</h4>
+          <p class="text-tertiary-light-6 leading-3">
+            You&#39;re buying an access to the Startup Generator app to export
+            ready-made templates with the rest source files included. It&#39;s
+            an online tool, not a software. For more details about
+            generator&#39;s workflow watch this tutorial.
+          </p>
+        </div>
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">
+            Are you planning to update Startup Framework?
+          </h4>
+          <p class="text-tertiary-light-6 leading-3">
+            We are! Here is the changelog of changes we&#39;ve made after the
+            release. Thanks our clients who helped us to improve our product.
+          </p>
+        </div>
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">How Startup Framework works?</h4>
+          <p class="text-tertiary-light-6 leading-3">
+            The Generator App is an online tool that helps you to export
+            ready-made templates ready to work as your future website. It helps
+            you to combine slides, panels and other components and export it as
+            a set of static files: HTML/CSS/JS.
+          </p>
+        </div>
+        <div class="col-12-xs col-6-lg">
+          <h4 class="font-sm fw-xxl">Do you provide support for customers?</h4>
+          <p class="text-tertiary-light-6 leading-3">
+            Yes, we are. Please use our contact us form to chat with us. We DO
+            NOT provide product support via Facebook, Twitter or others sources.
           </p>
         </div>
       </div>
@@ -127,7 +139,7 @@
           <button class="btn-green text-white font-sm pl-2 pr-2 mt-1 b-rad">
             Subscribe
           </button>
-          <div class="display-f font-md mt-2 align-center col-gap-3">
+          <div class="display-f font-sm fw-xxl mt-2 align-center col-gap-3">
             <li class="text-tw text-hover-tw-dark-1">
               <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
