--- a/Homepage.html
+++ b/Homepage.html
@@ -28,6 +28,8 @@
       |
       <span class="text-error">Text-error</span>
       |
+      <span class="text-green">Text-green</span>
+      |
       <span class="text-tw">Text-tw</span>
       |
       <span class="text-fb">Text-fb</span>
@@ -51,6 +53,8 @@
       |
       <span class="bg-error">bg-error</span>
       |
+      <span class="bg-green">bg-green</span>
+      |
       <span class="bg-tw">bg-tw</span>
       |
       <span class="bg-fb">bg-fb</span>
@@ -72,6 +76,8 @@
       |
       <span class="text-hover-error">Text-error</span>
       |
+      <span class="text-hover-green">Text-green</span>
+      |
       <span class="text-hover-tw">Text-tw</span>
       |
       <span class="text-hover-fb">Text-fb</span>
@@ -81,6 +87,20 @@
       <br />
       <br />
       <hr />
+
+      <!-- Text Decorations -->
+      <h2>Text Decorations</h2>
+      <span class="text-underline">Text-underline</span>
+      |
+      <span class="text-overline">Text-overline</span>
+      |
+      <span class="text-line-through">Text-line-through</span>
+      |
+
+      <br />
+      <br />
+      <hr />
+
       <!-- Buttons  -->
       <h2>Buttons</h2>
       <span class="btn-primary text-white">btn-primary</span>
@@ -92,6 +112,8 @@
       <span class="btn-info">btn-info</span>
       |
       <span class="btn-error">btn-error</span>
+      |
+      <span class="btn-green">btn-green</span>
       |
       <span class="btn-tw">btn-tw</span>
       |
@@ -115,11 +137,13 @@
       |
       <span class="btn-error-light-5">btn-error</span>
       |
-      <span class="btn-tw-light-6">btn-tw</span>
+      <span class="btn-green-light-6">btn-green</span>
       |
-      <span class="btn-fb-light-7">btn-fb</span>
+      <span class="btn-tw-light-7">btn-tw</span>
       |
-      <span class="btn-yt-light-8">btn-yt</span>
+      <span class="btn-fb-light-8">btn-fb</span>
+      |
+      <span class="btn-yt-light-9">btn-yt</span>
       |
       <br />
       <br />
@@ -137,11 +161,13 @@
       |
       <span class="btn-error-dark-5">btn-error</span>
       |
-      <span class="btn-tw-dark-6">btn-tw</span>
+      <span class="btn-green-dark-6">btn-green</span>
       |
-      <span class="btn-fb-dark-7">btn-fb</span>
+      <span class="btn-tw-dark-7">btn-tw</span>
       |
-      <span class="btn-yt-dark-8">btn-yt</span>
+      <span class="btn-fb-dark-8">btn-fb</span>
+      |
+      <span class="btn-yt-dark-9">btn-yt</span>
       |
       <br />
       <br />
@@ -159,6 +185,8 @@
       <span class="btn-outlined-info">btn-outlined-info</span>
       |
       <span class="btn-outlined-error">btn-outlined-error</span>
+      |
+      <span class="btn-outlined-green">btn-outlined-green</span>
       |
       <span class="btn-outlined-tw">btn-outlined-tw</span>
       |
@@ -185,11 +213,13 @@
       |
       <span class="btn-outlined-error-light-5">btn-outlined-error</span>
       |
-      <span class="btn-outlined-tw-light-6">btn-outlined-tw</span>
+      <span class="btn-outlined-green-light-6">btn-outlined-green</span>
       |
-      <span class="btn-outlined-fb-light-7">btn-outlined-fb</span>
+      <span class="btn-outlined-tw-light-7">btn-outlined-tw</span>
       |
-      <span class="btn-outlined-yt-light-8">btn-outlined-yt</span>
+      <span class="btn-outlined-fb-light-8">btn-outlined-fb</span>
+      |
+      <span class="btn-outlined-yt-light-9">btn-outlined-yt</span>
       |
 
       <br />
@@ -210,11 +240,13 @@
       |
       <span class="btn-outlined-error-dark-5">btn-outlined-error</span>
       |
-      <span class="btn-outlined-tw-dark-6">btn-outlined-tw</span>
+      <span class="btn-outlined-green-dark-6">btn-outlined-green</span>
       |
-      <span class="btn-outlined-fb-dark-7">btn-outlined-fb</span>
+      <span class="btn-outlined-tw-dark-7">btn-outlined-tw</span>
       |
-      <span class="btn-outlined-yt-dark-8">btn-outlined-yt</span>
+      <span class="btn-outlined-fb-dark-8">btn-outlined-fb</span>
+      |
+      <span class="btn-outlined-yt-dark-9">btn-outlined-yt</span>
       |
 
       <br />
@@ -236,6 +268,9 @@
       <br />
       <br />
       <span class="border-1-dotted-error">bordered-error</span>
+      <br />
+      <br />
+      <span class="border-2-solid-green">bordered-green</span>
       <br />
       <br />
       <span class="border-3-dashed-tw">bordered-tw</span>
@@ -318,6 +353,8 @@
       <span class="navbar-tw">navbar-tw</span>
       <br />
       <span class="navbar-error">navbar-error</span>
+      <br />
+      <span class="navbar-green">navbar-green</span>
       <br />
       <span class="navbar-info">navbar-info</span>
       <br />
@@ -416,6 +453,15 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-error text-white">
             <h3 class="card__title">Hello Error!</h3>
+            <p class="card__body">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequuntur, in!
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-6-md col-4-xl">
+          <div class="card-green">
+            <h3 class="card__title">Hello Green!</h3>
             <p class="card__body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Consequuntur, in!
