--- a/Page1.html
+++ b/Page1.html
@@ -11,46 +11,38 @@
     />
   </head>
   <body class="bg-primary">
-   
-      <header class="header text-white container mt-2">
-        <h1 class="header__title">Startup 3</h1>
-        <nav>
-          <div class="header__menu">
-
-            <ul class="header__navs">
-              <li class="header__items text-hover-primary-light-8">
-                <a href="Tour.html" >Tour</a>
-              </li>
-              <li class="header__items text-hover-primary-light-8">
-                <a href="#" >Features</a>
-              </li>
-              <li class="header__items text-hover-primary-light-8">
-                <a href="#"">Pricing</a>
-              </li>
-              <li class="header__items text-hover-primary-light-8">
-                <a href="#" >Blog</a>
-              </li>
-              <li class="header__items text-hover-fb font-sm">
-                <a href="#" 
-                  ><i class="fa-brands fa-facebook-f"></i
-                ></a>
-              </li>
-              <li class="header__items text-hover-tw font-sm">
-                <a href="#"
-                  ><i class="fa-brands fa-twitter"></i
-                ></a>
-              </li>
-              <li class="header__items text-hover-yt font-sm">
-                <a href="#" 
-                  ><i class="fa-brands fa-youtube"></i
-                ></a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </header>
-      <div class="container mt-2">
-         <!-- display-f align-center justify-space-between mt-2 -->
+    <header class="header text-white container mt-2">
+      <h1 class="header__title"><a href="Page1.html">Startup 3</a></h1>
+      <nav>
+        <div class="header__menu">
+          <ul class="header__navs">
+            <li class="header__items text-hover-primary-light-8">
+              <a href="Tour.html">Tour</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="Features.html">Features</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="Pricings.html">Pricing</a>
+            </li>
+            <li class="header__items text-hover-primary-light-8">
+              <a href="Blogs.html">Blog</a>
+            </li>
+            <li class="header__items text-hover-fb font-sm">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li class="header__items text-hover-tw font-sm">
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li class="header__items text-hover-yt font-sm">
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="container mt-2">
+      <!-- display-f align-center justify-space-between mt-2 -->
       <main class="main row align-center col-gap-9 mt-2 mb-3">
         <div class="main__info text-white">
           <h3 class="font-xxl">Simple design & prototyping</h3>
@@ -72,9 +64,8 @@
         src="https://www.youtube.com/embed/tgbNymZ7vqY"
       >
       </iframe>
-      </div>
-     
-   
+    </div>
+
     <footer class="footer bg-white pt-2 pb-2">
       <div class="container row col-gap-9 justify-space-between">
         <div class="col-12-sm col-2-lg">
@@ -131,7 +122,6 @@
         </p>
       </div>
     </div>
-
 
     <script src="index.js"></script>
   </body>
