--- a/Tour.html
+++ b/Tour.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-primary">
     <header class="header text-white container mt-2">
-      <h1 class="header__title">Startup 3</h1>
+      <h1 class="header__title"><a href="Page1.html">Startup 3</a></h1>
       <nav>
         <div class="header__menu">
           <ul class="header__navs">
@@ -25,10 +25,10 @@
               <a href="Features.html">Features</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#">Pricing</a>
+              <a href="Pricings.html">Pricing</a>
             </li>
             <li class="header__items text-hover-primary-light-8">
-              <a href="#">Blog</a>
+              <a href="Blogs.html">Blog</a>
             </li>
             <li class="header__items text-hover-fb font-sm">
               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
