--- a/Tour.html
+++ b/Tour.html
@@ -56,7 +56,9 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/1.png" />
-            <p class="card__title text-primary fw-lg">Quality you can trust</p>
+            <p class="card__title text-primary fw-lg leading-1">
+              Quality you can trust
+            </p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
