--- a/Tour.html
+++ b/Tour.html
@@ -56,9 +56,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/1.png" />
-            <p class="card__title text-primary fw-lg leading-1">
-              Quality you can trust
-            </p>
+            <p class="card__title text-primary fw-lg">Quality you can trust</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -73,9 +71,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/2.png" />
-            <p class="card__title text-primary fw-lg leading-1">
-              Fast prototyping
-            </p>
+            <p class="card__title text-primary fw-lg">Fast prototyping</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -90,9 +86,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/3.png" />
-            <p class="card__title text-primary fw-lg leading-1">
-              Bootstrap based
-            </p>
+            <p class="card__title text-primary fw-lg">Bootstrap based</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -107,9 +101,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/4.png" />
-            <p class="card__title text-primary fw-lg leading-1">
-              Mozart Project
-            </p>
+            <p class="card__title text-primary fw-lg">Mozart Project</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -124,9 +116,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/5.png" />
-            <p class="card__title text-primary fw-lg leading-1">
-              Web Generator
-            </p>
+            <p class="card__title text-primary fw-lg">Web Generator</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
@@ -141,7 +131,7 @@
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
             <img class="b-rad-sm" src="img/6.png" />
-            <p class="card__title text-primary fw-lg leading-1">Postcards</p>
+            <p class="card__title text-primary fw-lg">Postcards</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
               Feel the Clarity!
